# vivid

./: CMakeLists.txt  README.md  build-and-run.bat  build-and-run.sh
engine/: CMakeLists.txt
engine/src/: defines.h  entry.h  game_types.h  test.h
engine/src/containers/: darray.c  darray.h
engine/src/core/: application.c  application.h  asserts.c  asserts.h  event.c  event.h  input.c  input.h  logger.c  logger.h  vmemory.c  vmemory.h  vstring.c  vstring.h
engine/src/platform/: platform.h  platform_linux.c  platform_win32.c
testbed/: CMakeLists.txt
testbed/src/: entry.c  game.c  game.h
